add_CLI: Fill out CLI options and help. Minor refactoring to functions and re-run dev notebook

--- a/development/compiled/data-conversion-challenge-202004.ipynb
+++ b/development/compiled/data-conversion-challenge-202004.ipynb
@@ -95,7 +95,8 @@
       "numpy version:\t\t\t1.18.2\n",
       "pandas version:\t\t\t0.25.3\n",
       "openpyxl version:\t\t3.0.3\n",
-      "premierconverter version:\t0.1.2\n"
+      "click version:\t\t\t7.1.1\n",
+      "premierconverter version:\t0.2.0\n"
      ]
     }
    ],
@@ -111,6 +112,7 @@
     "import pandas as pd\n",
     "from openpyxl import __version__ as opyxl_version\n",
     "from openpyxl import load_workbook\n",
+    "from click import __version__ as click_version\n",
     "\n",
     "# Import project modules\n",
     "if not on_kaggle:\n",
@@ -132,7 +134,8 @@
     "print(f'pandas version:\\t\\t\\t{pd.__version__}')\n",
     "assert opyxl_version == '3.0.3'\n",
     "print(f'openpyxl version:\\t\\t{opyxl_version}')\n",
-    "assert PCon.__version__ == '0.1.2'\n",
+    "assert click_version == '7.1.1'\n",
+    "print(f'click version:\\t\\t\\t{click_version}')\n",
     "print(f'premierconverter version:\\t{PCon.__version__}')"
    ]
   },
@@ -260,22 +263,22 @@
    ],
    "source": [
     "# Input file location\n",
-    "input_filepath = raw_data_folder_path / 'minimal_dummy_data_01.xlsx'\n",
-    "input_sheet = None\n",
-    "if input_sheet is None:\n",
-    "    input_sheet = 0\n",
+    "in_filepath = raw_data_folder_path / 'minimal_dummy_data_01.xlsx'\n",
+    "in_sheet = None\n",
+    "if in_sheet is None:\n",
+    "    in_sheet = 0\n",
     "\n",
     "# Checks\n",
-    "input_filepath = Path(input_filepath)\n",
-    "if not input_filepath.is_file():\n",
+    "in_filepath = Path(in_filepath)\n",
+    "if not in_filepath.is_file():\n",
     "    raise FileNotFoundError(\n",
-    "        \"\\n\\tinput_filepath: There is no file at the input location:\"\n",
-    "        f\"\\n\\t'{input_filepath}'\"\n",
+    "        \"\\n\\tin_filepath: There is no file at the input location:\"\n",
+    "        f\"\\n\\t'{in_filepath}'\"\n",
     "        \"\\n\\tCannot read the input data\"\n",
     "    )\n",
-    "if not input_filepath.suffix in excel_extensions:\n",
+    "if not in_filepath.suffix in excel_extensions:\n",
     "    warnings.warn(\n",
-    "        f\"input_filepath: The input file extension '{input_filepath.suffix}' \"\n",
+    "        f\"in_filepath: The input file extension '{in_filepath.suffix}' \"\n",
     "        \"is not a recognised Excel extension\",\n",
     "    )\n",
     "print(\"Correct: Input file exists and has an Excel extension\")"
@@ -562,7 +565,7 @@
    ],
    "source": [
     "df_raw = pd.read_excel(\n",
-    "    input_filepath, sheet_name=input_sheet,\n",
+    "    in_filepath, sheet_name=in_sheet,\n",
     "    engine=\"openpyxl\",  # As per: https://stackoverflow.com/a/60709194\n",
     "    header=None, index_col=0,\n",
     ").rename_axis(index=\"Ref_num\")\n",
@@ -578,11 +581,16 @@
    "source": [
     "# Check it is as expected\n",
     "if not (\n",
+    "    # At least the stem columns and one factor set column\n",
+    "    df_raw.shape[1] >= \n",
+    "    raw_struct['stem']['ncols'] + 1 * raw_struct['f_set']['ncols']\n",
+    ") or not (\n",
+    "    # Stem columns plus a multiple of factor set columns\n",
     "    (df_raw.shape[1] - raw_struct['stem']['ncols']) \n",
     "    % raw_struct['f_set']['ncols'] == 0\n",
     "):\n",
     "    warnings.warn(\n",
-    "        f\"Raw data: Incorrect number of columns: {df_raw.shape[1]}\"\n",
+    "        f\"Raw data: Incorrect number of columns in workbook: {df_raw.shape[1] + 1}\"\n",
     "        \"\\n\\tThere should be: 1 for index, \"\n",
     "        f\"{raw_struct['stem']['ncols']} for stem section, \"\n",
     "        f\"and by a multiple of {raw_struct['f_set']['ncols']} for factor sets\"\n",
@@ -2005,17 +2013,27 @@
      "text": [
       "Help on function convert in module premierconverter:\n",
       "\n",
-      "convert(input_filepath, input_sheet=None, out_filepath='formatted_data.xlsx', out_sheet_name='Sheet1', force_overwrite=False, **kwargs)\n",
+      "convert(in_filepath, out_filepath, in_sheet=None, out_sheet_name='Sheet1', force_overwrite=False, **kwargs)\n",
       "    Load raw data from Excel, convert to specified format, and save result\n",
       "    \n",
-      "    input_filepath: Excel file containing a sheet with the raw data\n",
-      "    input_sheet: None or 0 for the first sheet, or the name of a sheet\n",
+      "    in_filepath: Path to Excel file containing a sheet with the raw data\n",
       "    out_filepath: Path of an Excel file to save the formatted data\n",
+      "        If it does not exist, a new workbook will be created.\n",
+      "        The directory must already exist.\n",
+      "    \n",
+      "    in_sheet: Which sheet (numbered from 0 or sheet name) of the input workbook to use\n",
       "    out_sheet_name: Name of the sheet to save the formatted data\n",
       "    force_overwrite: Set to True if you want to overwrite the existing workbook sheet\n",
+      "    \n",
       "    **kwargs: Arguments to pass to convert_df\n",
       "    \n",
-      "    Returns: (out_filepath, out_sheet_name) if it completes\n",
+      "    Returns: (out_filepath, out_sheet_name) if it completes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n"
      ]
     }
@@ -2033,14 +2051,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output saved\n"
+      "Output saved\n",
+      "File:\t/home/jovyan/development/compiled/formatted_data.xlsx\n",
+      "Sheet:\tSheet1\n"
      ]
     }
    ],
    "source": [
     "# Run with default arguments\n",
-    "input_filepath = raw_data_folder_path / 'minimal_dummy_data_01.xlsx'\n",
-    "out_filepath, out_sheet_name = PCon.convert(input_filepath)"
+    "in_filepath = raw_data_folder_path / 'minimal_dummy_data_01.xlsx'\n",
+    "out_filepath = 'formatted_data.xlsx'\n",
+    "res_filepath, res_sheet_name = PCon.convert(in_filepath, out_filepath)"
    ]
   },
   {
@@ -2189,7 +2210,7 @@
    "source": [
     "# Run the pipeline manually to check\n",
     "# Load raw data\n",
-    "df_raw = PCon.read_raw_data(input_filepath)\n",
+    "df_raw = PCon.read_raw_data(in_filepath)\n",
     "# Get converted DataFrame\n",
     "df_formatted = PCon.convert_df(df_raw)\n",
     "\n",
@@ -2211,7 +2232,7 @@
    ],
    "source": [
     "# Reload resulting data from workbook\n",
-    "df_reload = PCon.load_formatted_spreadsheet(out_filepath, out_sheet_name)\n",
+    "df_reload = PCon.load_formatted_spreadsheet(res_filepath, res_sheet_name)\n",
     "\n",
     "# Check it matches expectations\n",
     "assert (df_formatted.dtypes == df_reload.dtypes).all()\n",
@@ -2267,7 +2288,7 @@
    ],
    "source": [
     "# Delete the results workbook\n",
-    "out_filepath.unlink()\n",
+    "res_filepath.unlink()\n",
     "print(\"Workspace restored\")"
    ]
   },
