add_tests: Change config variable pf_sep (*) to <space>
* pf_sep is the separator for Peril-Factor strings in the column names of the result

--- a/development/compiled/data-conversion-challenge-202004.ipynb
+++ b/development/compiled/data-conversion-challenge-202004.ipynb
@@ -29,8 +29,7 @@
     "1. [Setup](#Setup): Import packages, Config variables\n",
     "1. [Variables](#Variables): Raw data structure, Inputs\n",
     "1. [Workflow](#Workflow): Load raw data, Remove unwanted extra values, Stem section, Factor sets, Output to CSV, Load expected output to check it is as expected\n",
-    "1. [Using the functions](#Using-the-functions)\n",
-    "1. [Unused rough work](#Unused-rough-work): Replace multiple string terms, Chained drop a column MultiIndex level"
+    "1. [Using the functions](#Using-the-functions)"
    ]
   },
   {
@@ -96,7 +95,7 @@
       "numpy version:\t\t\t1.18.2\n",
       "pandas version:\t\t\t0.25.3\n",
       "click version:\t\t\t7.1.1\n",
-      "premierconverter version:\t0.3.1\n"
+      "premierconverter version:\t0.3.2\n"
      ]
     }
    ],
@@ -251,7 +250,7 @@
     "nrows = None\n",
     "\n",
     "# Seperator for Peril_Factor column names in output\n",
-    "pf_sep = '_'"
+    "pf_sep = ' '"
    ]
   },
   {
@@ -1390,8 +1389,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Peril_Factor</th>\n",
-       "      <th>AnotherPrl_Base Premium</th>\n",
-       "      <th>Peril1_Base Premium</th>\n",
+       "      <th>AnotherPrl Base Premium</th>\n",
+       "      <th>Peril1 Base Premium</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -1422,7 +1421,7 @@
       "text/plain": [
        "Peril                     AnotherPrl              Peril1\n",
        "Custom_order                       0                   0\n",
-       "Peril_Factor AnotherPrl_Base Premium Peril1_Base Premium\n",
+       "Peril_Factor AnotherPrl Base Premium Peril1 Base Premium\n",
        "Ref_num                                                 \n",
        "1                               5.17               91.95\n",
        "2                             101.56              100.55\n",
@@ -1507,12 +1506,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Peril_Factor</th>\n",
-       "      <th>AnotherPrl_Factor1</th>\n",
-       "      <th>AnotherPrl_NewFact</th>\n",
-       "      <th>AnotherPrl_SomeFact</th>\n",
-       "      <th>Peril1_Factor1</th>\n",
-       "      <th>Peril1_NewFact</th>\n",
-       "      <th>Peril1_SomeFact</th>\n",
+       "      <th>AnotherPrl Factor1</th>\n",
+       "      <th>AnotherPrl NewFact</th>\n",
+       "      <th>AnotherPrl SomeFact</th>\n",
+       "      <th>Peril1 Factor1</th>\n",
+       "      <th>Peril1 NewFact</th>\n",
+       "      <th>Peril1 SomeFact</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -1559,7 +1558,7 @@
       "text/plain": [
        "Peril                AnotherPrl                                         \\\n",
        "Custom_order                  1                                          \n",
-       "Peril_Factor AnotherPrl_Factor1 AnotherPrl_NewFact AnotherPrl_SomeFact   \n",
+       "Peril_Factor AnotherPrl Factor1 AnotherPrl NewFact AnotherPrl SomeFact   \n",
        "Ref_num                                                                  \n",
        "1                      1.000000                1.0            1.000000   \n",
        "2                      1.064887                1.0            0.648875   \n",
@@ -1567,7 +1566,7 @@
        "\n",
        "Peril                Peril1                                 \n",
        "Custom_order              1                                 \n",
-       "Peril_Factor Peril1_Factor1 Peril1_NewFact Peril1_SomeFact  \n",
+       "Peril_Factor Peril1 Factor1 Peril1 NewFact Peril1 SomeFact  \n",
        "Ref_num                                                     \n",
        "1                   0.99818       1.000000             1.0  \n",
        "2                   1.00000       1.000000             1.0  \n",
@@ -1651,14 +1650,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Peril_Factor</th>\n",
-       "      <th>AnotherPrl_Base Premium</th>\n",
-       "      <th>AnotherPrl_Factor1</th>\n",
-       "      <th>AnotherPrl_NewFact</th>\n",
-       "      <th>AnotherPrl_SomeFact</th>\n",
-       "      <th>Peril1_Base Premium</th>\n",
-       "      <th>Peril1_Factor1</th>\n",
-       "      <th>Peril1_NewFact</th>\n",
-       "      <th>Peril1_SomeFact</th>\n",
+       "      <th>AnotherPrl Base Premium</th>\n",
+       "      <th>AnotherPrl Factor1</th>\n",
+       "      <th>AnotherPrl NewFact</th>\n",
+       "      <th>AnotherPrl SomeFact</th>\n",
+       "      <th>Peril1 Base Premium</th>\n",
+       "      <th>Peril1 Factor1</th>\n",
+       "      <th>Peril1 NewFact</th>\n",
+       "      <th>Peril1 SomeFact</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -1711,19 +1710,19 @@
        "</div>"
       ],
       "text/plain": [
-       "Peril_Factor  AnotherPrl_Base Premium  AnotherPrl_Factor1  AnotherPrl_NewFact  \\\n",
+       "Peril_Factor  AnotherPrl Base Premium  AnotherPrl Factor1  AnotherPrl NewFact  \\\n",
        "Ref_num                                                                         \n",
        "1                                5.17            1.000000                 1.0   \n",
        "2                              101.56            1.064887                 1.0   \n",
        "4                               51.34            1.000000                 1.0   \n",
        "\n",
-       "Peril_Factor  AnotherPrl_SomeFact  Peril1_Base Premium  Peril1_Factor1  \\\n",
+       "Peril_Factor  AnotherPrl SomeFact  Peril1 Base Premium  Peril1 Factor1  \\\n",
        "Ref_num                                                                  \n",
        "1                        1.000000                91.95         0.99818   \n",
        "2                        0.648875               100.55         1.00000   \n",
        "4                        1.000000                91.95         1.20000   \n",
        "\n",
-       "Peril_Factor  Peril1_NewFact  Peril1_SomeFact  \n",
+       "Peril_Factor  Peril1 NewFact  Peril1 SomeFact  \n",
        "Ref_num                                        \n",
        "1                   1.000000              1.0  \n",
        "2                   1.000000              1.0  \n",
@@ -1781,14 +1780,14 @@
        "      <th></th>\n",
        "      <th>Premier_Test_Status</th>\n",
        "      <th>Total_Premium</th>\n",
-       "      <th>AnotherPrl_Base Premium</th>\n",
-       "      <th>AnotherPrl_Factor1</th>\n",
-       "      <th>AnotherPrl_NewFact</th>\n",
-       "      <th>AnotherPrl_SomeFact</th>\n",
-       "      <th>Peril1_Base Premium</th>\n",
-       "      <th>Peril1_Factor1</th>\n",
-       "      <th>Peril1_NewFact</th>\n",
-       "      <th>Peril1_SomeFact</th>\n",
+       "      <th>AnotherPrl Base Premium</th>\n",
+       "      <th>AnotherPrl Factor1</th>\n",
+       "      <th>AnotherPrl NewFact</th>\n",
+       "      <th>AnotherPrl SomeFact</th>\n",
+       "      <th>Peril1 Base Premium</th>\n",
+       "      <th>Peril1 Factor1</th>\n",
+       "      <th>Peril1 NewFact</th>\n",
+       "      <th>Peril1 SomeFact</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -1869,21 +1868,21 @@
        "3        Error: Data Server Text Value Not Found (1111)...           0.00   \n",
        "4                                                       Ok         161.68   \n",
        "\n",
-       "         AnotherPrl_Base Premium  AnotherPrl_Factor1  AnotherPrl_NewFact  \\\n",
+       "         AnotherPrl Base Premium  AnotherPrl Factor1  AnotherPrl NewFact  \\\n",
        "Ref_num                                                                    \n",
        "1                           5.17            1.000000                 1.0   \n",
        "2                         101.56            1.064887                 1.0   \n",
        "3                           0.00            0.000000                 0.0   \n",
        "4                          51.34            1.000000                 1.0   \n",
        "\n",
-       "         AnotherPrl_SomeFact  Peril1_Base Premium  Peril1_Factor1  \\\n",
+       "         AnotherPrl SomeFact  Peril1 Base Premium  Peril1 Factor1  \\\n",
        "Ref_num                                                             \n",
        "1                   1.000000                91.95         0.99818   \n",
        "2                   0.648875               100.55         1.00000   \n",
        "3                   0.000000                 0.00         0.00000   \n",
        "4                   1.000000                91.95         1.20000   \n",
        "\n",
-       "         Peril1_NewFact  Peril1_SomeFact  \n",
+       "         Peril1 NewFact  Peril1 SomeFact  \n",
        "Ref_num                                   \n",
        "1              1.000000              1.0  \n",
        "2              1.000000              1.0  \n",
@@ -1970,14 +1969,14 @@
        "      <th></th>\n",
        "      <th>Premier_Test_Status</th>\n",
        "      <th>Total_Premium</th>\n",
-       "      <th>AnotherPrl_Base Premium</th>\n",
-       "      <th>AnotherPrl_Factor1</th>\n",
-       "      <th>AnotherPrl_NewFact</th>\n",
-       "      <th>AnotherPrl_SomeFact</th>\n",
-       "      <th>Peril1_Base Premium</th>\n",
-       "      <th>Peril1_Factor1</th>\n",
-       "      <th>Peril1_NewFact</th>\n",
-       "      <th>Peril1_SomeFact</th>\n",
+       "      <th>AnotherPrl Base Premium</th>\n",
+       "      <th>AnotherPrl Factor1</th>\n",
+       "      <th>AnotherPrl NewFact</th>\n",
+       "      <th>AnotherPrl SomeFact</th>\n",
+       "      <th>Peril1 Base Premium</th>\n",
+       "      <th>Peril1 Factor1</th>\n",
+       "      <th>Peril1 NewFact</th>\n",
+       "      <th>Peril1 SomeFact</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -2058,21 +2057,21 @@
        "3        Error: Data Server Text Value Not Found (1111)...           0.00   \n",
        "4                                                       Ok         161.68   \n",
        "\n",
-       "         AnotherPrl_Base Premium  AnotherPrl_Factor1  AnotherPrl_NewFact  \\\n",
+       "         AnotherPrl Base Premium  AnotherPrl Factor1  AnotherPrl NewFact  \\\n",
        "Ref_num                                                                    \n",
        "1                           5.17            1.000000                 1.0   \n",
        "2                         101.56            1.064887                 1.0   \n",
        "3                           0.00            0.000000                 0.0   \n",
        "4                          51.34            1.000000                 1.0   \n",
        "\n",
-       "         AnotherPrl_SomeFact  Peril1_Base Premium  Peril1_Factor1  \\\n",
+       "         AnotherPrl SomeFact  Peril1 Base Premium  Peril1 Factor1  \\\n",
        "Ref_num                                                             \n",
        "1                   1.000000                91.95         0.99818   \n",
        "2                   0.648875               100.55         1.00000   \n",
        "3                   0.000000                 0.00         0.00000   \n",
        "4                   1.000000                91.95         1.20000   \n",
        "\n",
-       "         Peril1_NewFact  Peril1_SomeFact  \n",
+       "         Peril1 NewFact  Peril1 SomeFact  \n",
        "Ref_num                                   \n",
        "1              1.000000              1.0  \n",
        "2              1.000000              1.0  \n",
@@ -2163,14 +2162,14 @@
        "      <th></th>\n",
        "      <th>Premier_Test_Status</th>\n",
        "      <th>Total_Premium</th>\n",
-       "      <th>AnotherPrl_Base Premium</th>\n",
-       "      <th>AnotherPrl_Factor1</th>\n",
-       "      <th>AnotherPrl_NewFact</th>\n",
-       "      <th>AnotherPrl_SomeFact</th>\n",
-       "      <th>Peril1_Base Premium</th>\n",
-       "      <th>Peril1_Factor1</th>\n",
-       "      <th>Peril1_NewFact</th>\n",
-       "      <th>Peril1_SomeFact</th>\n",
+       "      <th>AnotherPrl Base Premium</th>\n",
+       "      <th>AnotherPrl Factor1</th>\n",
+       "      <th>AnotherPrl NewFact</th>\n",
+       "      <th>AnotherPrl SomeFact</th>\n",
+       "      <th>Peril1 Base Premium</th>\n",
+       "      <th>Peril1 Factor1</th>\n",
+       "      <th>Peril1 NewFact</th>\n",
+       "      <th>Peril1 SomeFact</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -2251,21 +2250,21 @@
        "3        Error: Data Server Text Value Not Found (1111)...           0.00   \n",
        "4                                                       Ok         161.68   \n",
        "\n",
-       "         AnotherPrl_Base Premium  AnotherPrl_Factor1  AnotherPrl_NewFact  \\\n",
+       "         AnotherPrl Base Premium  AnotherPrl Factor1  AnotherPrl NewFact  \\\n",
        "Ref_num                                                                    \n",
        "1                           5.17            1.000000                 1.0   \n",
        "2                         101.56            1.064887                 1.0   \n",
        "3                           0.00            0.000000                 0.0   \n",
        "4                          51.34            1.000000                 1.0   \n",
        "\n",
-       "         AnotherPrl_SomeFact  Peril1_Base Premium  Peril1_Factor1  \\\n",
+       "         AnotherPrl SomeFact  Peril1 Base Premium  Peril1 Factor1  \\\n",
        "Ref_num                                                             \n",
        "1                   1.000000                91.95         0.99818   \n",
        "2                   0.648875               100.55         1.00000   \n",
        "3                   0.000000                 0.00         0.00000   \n",
        "4                   1.000000                91.95         1.20000   \n",
        "\n",
-       "         Peril1_NewFact  Peril1_SomeFact  \n",
+       "         Peril1 NewFact  Peril1 SomeFact  \n",
        "Ref_num                                   \n",
        "1              1.000000              1.0  \n",
        "2              1.000000              1.0  \n",
@@ -2419,14 +2418,14 @@
        "      <th></th>\n",
        "      <th>Premier_Test_Status</th>\n",
        "      <th>Total_Premium</th>\n",
-       "      <th>AnotherPrl_Base Premium</th>\n",
-       "      <th>AnotherPrl_Factor1</th>\n",
-       "      <th>AnotherPrl_NewFact</th>\n",
-       "      <th>AnotherPrl_SomeFact</th>\n",
-       "      <th>Peril1_Base Premium</th>\n",
-       "      <th>Peril1_Factor1</th>\n",
-       "      <th>Peril1_NewFact</th>\n",
-       "      <th>Peril1_SomeFact</th>\n",
+       "      <th>AnotherPrl Base Premium</th>\n",
+       "      <th>AnotherPrl Factor1</th>\n",
+       "      <th>AnotherPrl NewFact</th>\n",
+       "      <th>AnotherPrl SomeFact</th>\n",
+       "      <th>Peril1 Base Premium</th>\n",
+       "      <th>Peril1 Factor1</th>\n",
+       "      <th>Peril1 NewFact</th>\n",
+       "      <th>Peril1 SomeFact</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ref_num</th>\n",
@@ -2507,21 +2506,21 @@
        "3        Error: Data Server Text Value Not Found (1111)...           0.00   \n",
        "4                                                       Ok         161.68   \n",
        "\n",
-       "         AnotherPrl_Base Premium  AnotherPrl_Factor1  AnotherPrl_NewFact  \\\n",
+       "         AnotherPrl Base Premium  AnotherPrl Factor1  AnotherPrl NewFact  \\\n",
        "Ref_num                                                                    \n",
        "1                           5.17            1.000000                 1.0   \n",
        "2                         101.56            1.064887                 1.0   \n",
        "3                           0.00            0.000000                 0.0   \n",
        "4                          51.34            1.000000                 1.0   \n",
        "\n",
-       "         AnotherPrl_SomeFact  Peril1_Base Premium  Peril1_Factor1  \\\n",
+       "         AnotherPrl SomeFact  Peril1 Base Premium  Peril1 Factor1  \\\n",
        "Ref_num                                                             \n",
        "1                   1.000000                91.95         0.99818   \n",
        "2                   0.648875               100.55         1.00000   \n",
        "3                   0.000000                 0.00         0.00000   \n",
        "4                   1.000000                91.95         1.20000   \n",
        "\n",
-       "         Peril1_NewFact  Peril1_SomeFact  \n",
+       "         Peril1 NewFact  Peril1 SomeFact  \n",
        "Ref_num                                   \n",
        "1              1.000000              1.0  \n",
        "2              1.000000              1.0  \n",
