var_len_rows: Compile dev notebook (*)
* Tested that it runs on Kaggle

--- a/development/compiled/data-conversion-challenge-202004.ipynb
+++ b/development/compiled/data-conversion-challenge-202004.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "This notebook is available in the following locations. These versions are kept in sync *manually* - there should not be discrepancies, but it is possible.\n",
     "- On Kaggle: <https://www.kaggle.com/btw78jt/data-conversion-challenge-202004>\n",
-    "- In the GitHub project repo: <https://github.com/A-Breeze/premierconverter>. See the `README.md` for further instructions, and the associated `simulate_dummy_data.md` notebook to generate the dummy data that is used for this notebook."
+    "- In the GitHub project repo: <https://github.com/A-Breeze/premierconverter>. See the `README.md` for further instructions, and the associated `simulate_dummy_data` notebook to generate the dummy data that is used for this notebook."
    ]
   },
   {
@@ -2232,14 +2232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correct: The reloaded values are equal, up to floating point tolerance"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Correct: The reloaded values are equal, up to floating point tolerance\n"
      ]
     }
    ],
@@ -2308,23 +2301,31 @@
      "output_type": "stream",
      "text": [
       "Step 1:\tValidate filepath arguments\n",
-      "Step 2:\tLoad and truncate input file lines\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Step 2:\tLoad and truncate input file lines\n",
       "Step 3:\tSplit lines into a DataFrame\n",
       "Step 4:\tReshape DataFrame into desired format\n",
-      "Step 5:\tSave resulting data format\n"
+      "Step 5:\tSave resulting data format"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data.csv\n"
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data.csv"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -2587,14 +2588,14 @@
      "output_type": "stream",
      "text": [
       "Step 1:\tValidate filepath arguments\n",
-      "Step 2:\tLoad and truncate input file lines\n"
+      "Step 2:\tLoad and truncate input file lines\n",
+      "Step 3:\tSplit lines into a DataFrame\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 3:\tSplit lines into a DataFrame\n",
       "Step 4:\tReshape DataFrame into desired format\n"
      ]
     },
@@ -2658,13 +2659,14 @@
      "output_type": "stream",
      "text": [
       "Step 1:\tValidate filepath arguments\n",
-      "Step 2:\tLoad and truncate input file lines\n"
+      "Step 2:\tLoad and truncate input file lines"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Step 3:\tSplit lines into a DataFrame\n",
       "Step 4:\tReshape DataFrame into desired format\n"
      ]
@@ -2673,14 +2675,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 5:\tSave resulting data format\n",
-      "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data_2_all_facts.csv\n"
+      "Step 5:\tSave resulting data format"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data_2_all_facts.csv"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Correct: The reloaded values are equal, up to floating point tolerance\n",
       "Workspace restored\n"
      ]
