pip_install: Compile explanatory notebook and tidy dev script

--- a/development/compiled/data-conversion-challenge-202004.ipynb
+++ b/development/compiled/data-conversion-challenge-202004.ipynb
@@ -95,7 +95,7 @@
       "numpy version:\t\t\t1.18.2\n",
       "pandas version:\t\t\t0.25.3\n",
       "click version:\t\t\t7.1.1\n",
-      "premierconverter version:\t0.3.3\n"
+      "premierconverter version:\t0.3.4\n"
      ]
     }
    ],
@@ -2300,18 +2300,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1:\tValidate filepath arguments\n",
-      "Step 2:\tLoad and truncate input file lines\n",
-      "Step 3:\tSplit lines into a DataFrame\n",
-      "Step 4:\tReshape DataFrame into desired format\n",
-      "Step 5:\tSave resulting data format"
+      "Step 1:\tValidate filepath arguments\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Step 2:\tLoad and truncate input file lines\n",
+      "Step 3:\tSplit lines into a DataFrame\n",
+      "Step 4:\tReshape DataFrame into desired format\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 5:\tSave resulting data format\n"
      ]
     },
     {
@@ -2611,13 +2616,14 @@
      "output_type": "stream",
      "text": [
       "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data_2.csv\n",
-      "Correct: The reloaded values are equal, up to floating point tolerance\n"
+      "Correct: The reloaded values are equal, up to floating point tolerance"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Workspace restored\n"
      ]
     }
@@ -2659,15 +2665,20 @@
      "output_type": "stream",
      "text": [
       "Step 1:\tValidate filepath arguments\n",
-      "Step 2:\tLoad and truncate input file lines"
+      "Step 2:\tLoad and truncate input file lines\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Step 3:\tSplit lines into a DataFrame\n",
+      "Step 3:\tSplit lines into a DataFrame\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Step 4:\tReshape DataFrame into desired format\n"
      ]
     },
@@ -2675,28 +2686,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 5:\tSave resulting data format"
+      "Step 5:\tSave resulting data format\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data_2_all_facts.csv\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output saved here: H:\\My Documents\\05_Repos\\premierconverter\\development\\compiled\\formatted_data_2_all_facts.csv"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       "Correct: The reloaded values are equal, up to floating point tolerance\n",
       "Workspace restored\n"
      ]
